チャートを表示する

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <title>タイトル</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="custom.css">
-    <script src="taiko-stats.js"></script>
+    <script src="chart.js"></script>
+    <script src="stats.js"></script>
   </head>
   <body>
     <p>taikoapp.uk で太鼓ウェブをプレイしよう！</p>
-    <p><span id="time">-</span> から <span id="uniq">-</span> 人がプレイし、 <span id="gb">-</span> GBが送信されました！</p>
+    <canvas id="users" width="700" height="700"></canvas>
   </body>
 </html>
