--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,6 @@
   <body>
     <p>taikoapp.uk で太鼓ウェブをプレイしよう！</p>
     <canvas id="users" width="700" height="700"></canvas>
+    <canvas id="bytes" width="700" height="700"></canvas>
   </body>
 </html>
